<resources>
    <string name="app_name">Polyclinic Reception</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="polyclinic_official_name">Polyclinic Reception named after Bogdan Mashchenko</string>
    <string name="polyclinic_title">Polyclinic Reception</string>

    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>

    <string name="incorrect_login">Login is incorrect</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="incorrect_confirm_password">Passwords don\'t match</string>
    <string name="user_not_exist">User not exist</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_father_name">Father name</string>
    <string name="hint_diagnosis_name">Diagnosis</string>
    <string name="hint_ward_name">Ward</string>

    <string name="welcome_text">Welcome, %s!</string>
    <string name="onboarding_text">You can view the list of patients in the clinic, wards , and add new patients</string>
    <string name="cannot_add_pat">Cannot add this patient</string>
    <string name="cannot_update_pat">Cannot update this patient</string>
    <string name="ward_full">Ward is full</string>
    <string name="edit_patient">Edit patient</string>
    <string name="all_person_all_patients_text">All patients</string>
    <string name="all_person_all_text">All</string>
    <string name="add_person_add_patient_text">Add patient</string>
    <string name="add_person_add_text">Add</string>
    <string name="save_person_save_text">Save</string>
    <string name="single_ward">Ward : </string>
    <string name="single_ward_max_count">Max count : </string>
    <string name="single_diagnosis">Diagnosis : </string>
    <string name="all_wards_all_wards_text">All wards</string>
    <string name="all_wards_wards_text">Wards</string>
    <string name="edit_person"><u>Edit</u></string>
</resources>
