<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/background_primary"
    style="@style/FrameStyle">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_normal"
        android:src="@drawable/ic_polyc_main"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/polyclinic_official_name"
        android:layout_marginBottom="@dimen/padding_normal"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_default_plus_2"
        style="@style/TextAppearance_SemiBold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/autocomplete_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_normal"
        android:textColorHint="@color/gray_3">

        <AutoCompleteTextView
            android:id="@+id/text_login"
            style="@style/BaseRegInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/hint_username"
            android:imeOptions="flagNoExtractUi|actionNext"
            android:paddingBottom="8dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input"
        style="@style/RegInputPasswordHint"
        android:layout_marginBottom="@dimen/padding_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password_text"
            style="@style/BaseRegInput.Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/auth_actions"
        android:layout_width="@dimen/match_parent"
        android:layout_height="@dimen/wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/login_mb"
            android:layout_width="@dimen/wrap_content"
            android:layout_height="@dimen/wrap_content"
            android:text="@string/login"
            android:elevation="6dp"
            android:stateListAnimator="@null"
            android:translationZ="@dimen/padding_tiny"
            android:layout_marginRight="@dimen/padding_normal"
            style="@style/RoundedCornerButton"/>

        <TextView
            android:id="@+id/sign_up_tv"
            android:layout_width="@dimen/wrap_content"
            android:layout_height="@dimen/wrap_content"
            android:text="@string/sign_up"
            style="@style/TextAppearance_SemiBold.DefaultText"/>
    </LinearLayout>
</LinearLayout>