<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/base_toolbar"
            style="?attr/toolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways" />
    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:id="@+id/base_toolbar_shadow"
        style="@style/ActionBar.Shadow"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:background="@drawable/toolbar_shadow"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom"
        app:layout_constraintTop_toBottomOf="@id/appbar" />

    <TextView
        android:id="@+id/user_welcome_tv"
        style="@style/TextAppearance_SemiBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginTop="@dimen/padding_normal_double"
        android:layout_marginRight="@dimen/padding_normal"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_default_plus_9"
        app:layout_constraintTop_toBottomOf="@id/base_toolbar_shadow"
        tools:text="Gtnz fdrfsrdgrgrgrg" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/polyclinic_plus"
        app:layout_constraintTop_toBottomOf="@id/user_welcome_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/onboarding_tv"/>

    <TextView
        android:id="@+id/onboarding_tv"
        style="@style/TextAppearance_SemiBold.DefaultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        android:text="@string/onboarding_text"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/main_actions"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <LinearLayout
        android:id="@+id/main_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboarding_tv">

        <TextView
            android:id="@+id/all_person"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/all_person_all_text"
            android:layout_marginRight="@dimen/padding_normal"
            android:background="@drawable/two_person_stub"/>

        <TextView
            android:id="@+id/add_person"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/add_person_add_text"
            android:layout_marginRight="@dimen/padding_normal"
            android:background="@drawable/people_with_plus"/>

        <TextView
            android:id="@+id/all_wards"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/all_wards_wards_text"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:background="@drawable/ward_stub"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>